--- a/frontend/src/stylesheets/home.css
+++ b/frontend/src/stylesheets/home.css
@@ -1,7 +1,7 @@
 .home {
-    background-color: brown;
+/* 
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
   }
