--- a/frontend/src/stylesheets/header-nav.css
+++ b/frontend/src/stylesheets/header-nav.css
@@ -11,6 +11,9 @@
     background-color: var(--primary-color);
     color: var(--white-color);
     gap: 2em;
+    position: sticky;
+    top: 0;
+    z-index: 5;
 }
 
 .logo {
