--- a/frontend/src/stylesheets/book-library.css
+++ b/frontend/src/stylesheets/book-library.css
@@ -70,7 +70,7 @@
     padding: 20px 0;
 }
 
-.book-card {
+.book-library-card {
     position: relative;
     min-width: 230px;
     cursor: pointer;
@@ -84,7 +84,7 @@
 
 }
 
-.book-card.loading {
+.book-library-card.loading {
     cursor: default;
     pointer-events: none;
 }
