--- a/frontend/src/stylesheets/header-nav.css
+++ b/frontend/src/stylesheets/header-nav.css
@@ -13,7 +13,7 @@
     background-color: var(--primary-color);
     color: var(--white-color);
     gap: 2em;
-    position: sticky;
+    position: sticky !important;
     top: 0;
     z-index: 5;
 }
