--- a/frontend/src/stylesheets/about.css
+++ b/frontend/src/stylesheets/about.css
@@ -3,7 +3,7 @@
     background-color: #FCEAC6;
     color: var(--white-color);
     text-align: center;
-    padding-bottom: 5em;
+    /* padding-bottom: 5em; */
   }
   
   .about-container h1 {
