--- a/frontend/src/stylesheets/add-book.css
+++ b/frontend/src/stylesheets/add-book.css
@@ -39,3 +39,15 @@
 .btn-div {
     text-align: center;
 }
+
+.image-div {
+    position: relative;
+    overflow: hidden; 
+}
+
+#book-cover-img {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 100;
+}
