--- a/frontend/src/stylesheets/update-book.css
+++ b/frontend/src/stylesheets/update-book.css
@@ -1,4 +1,4 @@
-.add-book-div {
+.update-book-div {
     width: 100%;
     height: 100%; 
     background-color: #D6B498 !important;
@@ -19,7 +19,7 @@
     margin: 10px;
 }
 
-.add-form-container {
+.update-form-container {
     padding: 20px;
     background-color: white;
     margin: 20px;
