--- a/frontend/src/stylesheets/update-book.css
+++ b/frontend/src/stylesheets/update-book.css
@@ -3,7 +3,7 @@
 .update-book-div {
     width: 100%;
     height: 100%; 
-    background-color: #D6B498 !important;
+    background-color: rgba(252, 232, 199, 1) !important;
     padding-top: 20px;
 }
 
